/***********************************************************************
 X3 ChangeLog

2006-07-23  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Add config file regex fakehost test

2006-07-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fix to a crash/output corruption issue.

	* src/proto-p10.c: Host in topic supports sethost and fakehost
	now.

2006-07-21  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Added support for irc_wallop, irc_squit,
	irc_connect, and added callbacks to handle connect failures and
	successes. (All prep for auto routing system) 

	* src/proto.h: Added support for irc_wallop, irc_squit,
	irc_connect, and added callbacks to handle connect failures and 
	successes. (All prep for auto routing system)

	* src/opserv.help: Help entries for auto routing system + fix typeo in
	routing example

	* src/hash.h: New structs for auto routing system

	* src/opserv.c: The long-awaited X3 Auto Routing Plan system! + reduce
	error message to debug message.

	* src/opserv.h: The long-awaited X3 Auto Routing Plan system!

	* src/modcmd.c: added 'routing' main command alias.

2006-07-16  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added host_in_topic option for sending full
	nick!user@host if its enabled. Default to one as Nefarious is
	default to TRUE for HOST_IN_TOPIC. There will be wierdness if
	you have this enabled on X3 and not on your Nefarious server.

	* src/proto-p10.c: Make use of host_in_topic.

2006-07-13  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/nickserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/chanserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/mod-memoserv.c: Make all memoserv commands reply from the bot you